Implemented wishlist functionality, created endpoints and swagger configuration, created seed data
